feat: add AutoCompleteLov component with autocomplete and LOV functionality
- Implemented `AutoCompleteLov` component for searching and selecting items.
- Added `fetchLov` and `fetchDesc` methods for API interaction.
- Created supporting components: `AutocompleteCard`, `AutocompleteCollapse`, and placeholders.
- Updated styles for new components and added SCSS files.
- Refactored existing components to use new naming conventions (e.g., `nba-` prefix).
- Introduced `AutocompleteService` for handling API requests.
- Added documentation for `AutoCompleteLov` component usage and configuration.
- Updated form error message and input placeholder components to use new naming conventions.

--- a/projects/ng-bootstrap-addons/package.json
+++ b/projects/ng-bootstrap-addons/package.json
@@ -4,9 +4,11 @@
   "peerDependencies": {
     "@angular/common": "^19.2.0",
     "@angular/forms": "^19.2.0",
+    "@angular/core": "^19.2.0",
+    "@angular/cdk": "^19.2.10",
+    "rxjs": "~7.8.0",
     "bootstrap": "^5.3.3",
     "ngx-bootstrap": "^19.0.2",
-    "@angular/core": "^19.2.0",
     "ngx-mask": "^19.0.6"
   },
   "dependencies": {
