--- a/projects/ng-bootstrap-addons/package.json
+++ b/projects/ng-bootstrap-addons/package.json
@@ -6,6 +6,8 @@
     "@angular/forms": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/cdk": "^19.2.10",
+    "@angular/platform-browser": "^19.2.2",
+    "@angular/platform-browser-dynamic": "^19.2.2",
     "rxjs": "~7.8.0",
     "bootstrap": "^5.3.3",
     "ngx-bootstrap": "^19.0.2",
