feat: add new directives, pipes, and services to ng-bootstrap-addons
- Introduced ClickOutsideDirective for handling click events outside an element.
- Added ControlValueAccessorDirective to manage form controls.
- Implemented CurrencyDirective for formatting currency inputs.
- Created InputPasswordDirective to toggle password visibility.
- Developed NumericPipe for number formatting with optional currency display.
- Added CustomValidatorService for custom form validation messages.
- Implemented utility functions and classes for date and string manipulation.
- Updated public API exports for new directives and services.
- Removed unnecessary ng-package.json files from components and services.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,13 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
     "paths": {
       "ng-bootstrap-addons": [
         "./dist/ng-bootstrap-addons"
+      ],
+      "ng-bootstrap-addons/*": [
+        "dist/ng-bootstrap-addons/*"
       ]
     },
     "skipLibCheck": true,
