--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "ng-bootstrap-addons": ["./dist/ng-bootstrap-addons"],
       "ng-bootstrap-addons/*": ["dist/ng-bootstrap-addons/*"],
       "project/*": ["./projects/ng-bootstrap-addons/*"],
+      "utils/*": ["./projects/ng-bootstrap-addons/utils/src/*"],
       "directives/*": ["./projects/ng-bootstrap-addons/directives/src/*"],
       "components/*": ["./projects/ng-bootstrap-addons/components/src/*"],
       "inputs/*": ["./projects/ng-bootstrap-addons/inputs/src/*"],
