--- a/projects/ng-bootstrap-addons/package.json
+++ b/projects/ng-bootstrap-addons/package.json
@@ -2,16 +2,16 @@
   "name": "ng-bootstrap-addons",
   "version": "1.1.2",
   "peerDependencies": {
-    "@angular/common": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/cdk": "^19.2.10",
-    "@angular/platform-browser": "^19.2.2",
-    "@angular/platform-browser-dynamic": "^19.2.2",
-    "rxjs": "~7.8.0",
-    "bootstrap": "^5.3.3",
-    "ngx-bootstrap": "^19.0.2",
-    "ngx-mask": "^19.0.6"
+    "@angular/common": ">=18.0.0",
+    "@angular/forms": ">=18.0.0",
+    "@angular/core": ">=18.0.0",
+    "@angular/cdk": ">=18.0.0",
+    "@angular/platform-browser": ">=18.0.0",
+    "@angular/platform-browser-dynamic": ">=18.0.0",
+    "rxjs": ">=7.8.0",
+    "bootstrap": "^5.2.0",
+    "ngx-bootstrap": ">=18.0.0",
+    "ngx-mask": ">=18.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
