--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "ngx-mask": "^19.0.6",
+    "bootstrap": "^5.2.3",
     "ngx-bootstrap": "^19.0.2",
     "@angular/router": "^19.2.0",
     "rxjs": "~7.8.0",
