--- a/projects/ng-bootstrap-addons/package.json
+++ b/projects/ng-bootstrap-addons/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ng-bootstrap-addons",
-  "version": "19.0.3",
+  "license": "MIT",
+  "version": "19.0.5",
   "peerDependencies": {
     "@angular/common": "^19.2.0",
     "@angular/forms": "^19.2.0",
