--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
       "form-error-message/*": ["./projects/ng-bootstrap-addons/form-error-message/src/*"],
       "services/*": ["./projects/ng-bootstrap-addons/services/src/*"],
       "textarea/*": ["./projects/ng-bootstrap-addons/textarea/src/*"],
+      "table/*": ["./projects/ng-bootstrap-addons/table/src/*"]
     },
     "skipLibCheck": true,
     "isolatedModules": true,
