feat: update gallery modal and toggle directive to use signals for state management

--- a/angular.json
+++ b/angular.json
@@ -61,7 +61,7 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "projects/demo/public"
+                "input": "projects/demo/src/assets"
               }
             ],
             "styles": [
